# taleweaver

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
src/: main.py  story_graph.py  story_node.py  story_teller.py  timer.py
tales/: ravenloft_echoes.yaml  ravenloft_echoes_timed.yaml
tests/: test_story_graph.py
